--- a/src/index-en.html
+++ b/src/index-en.html
@@ -14,6 +14,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="Mateusz Archiciński">
+    <meta property="fb:app_id" content="126655154641555">
     <meta property="og:url" content="https://www.mateusz-archicinski.pl/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="">
@@ -52,9 +53,44 @@
   </head>
   <body>
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.</p><![endif]-->
-    <header>
-      <h1>Normal - Template</h1>
+    <header class="main-header main-header__fixed">
+      <div class="container">
+        <div class="row no-gutters align-items-center justify-content-between">
+          <div class="site-logo__wrapper"><img class="side-logo__img" src="images/logo/logo.png" alt="#MA - Site logo" width="94" height="28"></div>
+          <nav class="side-nav__wrapper">
+            <ul class="side-nav__list">
+              <li><a class="side-nav__link" href="#home">Home</a></li>
+              <li><a class="side-nav__link" href="#about-me">About me</a></li>
+              <li><a class="side-nav__link" href="#services">Services</a></li>
+              <li><a class="side-nav__link" href="#portfolio">Portfolio</a></li>
+              <li><a class="side-nav__link" href="#contact">Contact</a></li>
+              <!--lia(href="#contact" class="side-nav__link language-settings__language")= data.header.sideNav.contact
+              -->
+            </ul>
+          </nav>
+        </div>
+      </div>
     </header>
+    <main class="main-wrapper">
+      <section class="home-wrapper">
+        <header>
+          <h1>Front-End Developer</h1>
+        </header>
+      </section>
+      <section class="about-me-wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+          </div>
+        </div>
+      </section>
+      <sectin class="services-wrapper"></sectin>
+      <section class="portfolio-wrapper"></section>
+      <section class="contact-wrapper"></section>
+    </main>
+    <footer class="main-footer"></footer>
     <!--JavaScript Sources-->
     <!--build:js js/main.min.js-->
     <!--Bower Components-->
@@ -63,5 +99,7 @@
     <!--Web Page - JavaScript Sources-->
     <script src="js/main.js"></script>
     <!--endbuild-->
+    <!--Google Analytics-->
+    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-72931206-2','auto');ga('send','pageview');</script>
   </body>
 </html>
