Some improvements & work with html/sass components

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -35,7 +35,7 @@
     <!--iOS & Android-->
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!--Windows-->
-    <meta name="msapplication-TileColor" content="#0a0a0a">
+    <meta name="msapplication-TileColor" content="#212121">
     <meta name="msapplication-TileImage" content="images/logo/logo-144x144.png">
     <!--Google Chrome - Theme Color-->
     <meta name="theme-color" content="#f44336">
@@ -53,19 +53,16 @@
   </head>
   <body>
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.</p><![endif]-->
-    <header class="main-header main-header__fixed">
+    <header class="main-header">
       <div class="container">
-        <div class="row no-gutters align-items-center justify-content-between">
-          <div class="site-logo__wrapper"><img class="side-logo__img" src="images/logo/logo.png" alt="#MA - Site logo" width="94" height="28"></div>
-          <nav class="side-nav__wrapper">
-            <ul class="side-nav__list">
-              <li><a class="side-nav__link" href="#home">Home</a></li>
-              <li><a class="side-nav__link" href="#about-me">About me</a></li>
-              <li><a class="side-nav__link" href="#services">Services</a></li>
-              <li><a class="side-nav__link" href="#portfolio">Portfolio</a></li>
-              <li><a class="side-nav__link" href="#contact">Contact</a></li>
-              <!--lia(href="#contact" class="side-nav__link language-settings__language")= data.header.sideNav.contact
-              -->
+        <div class="row no-gutters align-items-center justify-content-between"><a class="site-logo__wrapper" href="/"><img class="site-logo__img" src="images/logo/logo.png" alt="#MA - Site logo" width="94" height="28"></a>
+          <nav class="site-nav__wrapper">
+            <ul class="row site-nav__list">
+              <li><a class="site-nav__link" href="#home">Home</a></li>
+              <li><a class="site-nav__link" href="#about-me">About me</a></li>
+              <li><a class="site-nav__link" href="#services">Services</a></li>
+              <li><a class="site-nav__link" href="#portfolio">Portfolio</a></li>
+              <li><a class="site-nav__link" href="#contact">Contact</a></li>
             </ul>
           </nav>
         </div>
