--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -10,15 +10,15 @@
     <!--Phone Numbers Detection-->
     <meta name="format-detection" content="telephone=no">
     <!--Search Engine Optimization Sources-->
-    <title>Normal - Template</title>
-    <meta name="description" content="">
+    <title>#Mateusz Archiciński</title>
+    <meta name="description" content="Strona internetowa młodego frontend developera, freelancera z okolic Warszawy. Zajmuje się odświeżaniem obecnych i tworzeniem nowych stron wizytówek. Ostatnimi czasy zagłebiam się w tajniki webdesignu i poznawaniu bardziej złożonych technologii oraz pozycjoonowania.">
     <meta name="keywords" content="">
     <meta name="author" content="Mateusz Archiciński">
     <meta property="fb:app_id" content="126655154641555">
     <meta property="og:url" content="https://www.mateusz-archicinski.pl/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="Strona internetowa młodego frontend developera, freelancera z okolic Warszawy. Zajmuje się odświeżaniem obecnych i tworzeniem nowych stron wizytówek. Ostatnimi czasy zagłebiam się w tajniki webdesignu i poznawaniu bardziej złożonych technologii oraz pozycjoonowania.">
     <meta property="og:image" content="https://www.mateusz-archicinski.pl/tile-1200x630px.png">
     <meta name="robots" content="index, follow, noodp, noydir">
     <meta name="country" content="pl">
@@ -35,7 +35,7 @@
     <!--iOS & Android-->
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!--Windows-->
-    <meta name="msapplication-TileColor" content="#0a0a0a">
+    <meta name="msapplication-TileColor" content="#212121">
     <meta name="msapplication-TileImage" content="images/logo/logo-144x144.png">
     <!--Google Chrome - Theme Color-->
     <meta name="theme-color" content="#f44336">
@@ -53,19 +53,16 @@
   </head>
   <body>
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.</p><![endif]-->
-    <header class="main-header main-header__fixed">
+    <header class="main-header">
       <div class="container">
-        <div class="row no-gutters align-items-center justify-content-between">
-          <div class="site-logo__wrapper"><img class="side-logo__img" src="images/logo/logo.png" alt="#MA - Logo strony internetowej" width="94" height="28"></div>
-          <nav class="side-nav__wrapper">
-            <ul class="side-nav__list">
-              <li><a class="side-nav__link" href="#home">Strona główna</a></li>
-              <li><a class="side-nav__link" href="#about-me">O mnie</a></li>
-              <li><a class="side-nav__link" href="#services">Usługi</a></li>
-              <li><a class="side-nav__link" href="#portfolio">Portfolio</a></li>
-              <li><a class="side-nav__link" href="#contact">Kontakt</a></li>
-              <!--lia(href="#contact" class="side-nav__link language-settings__language")= data.header.sideNav.contact
-              -->
+        <div class="row no-gutters align-items-center justify-content-between"><a class="site-logo__wrapper" href="/"><img class="site-logo__img" src="images/logo/logo.png" alt="#MA - Logo strony internetowej" width="94" height="28"></a>
+          <nav class="site-nav__wrapper">
+            <ul class="row site-nav__list">
+              <li><a class="site-nav__link" href="#home">Strona główna</a></li>
+              <li><a class="site-nav__link" href="#about-me">O mnie</a></li>
+              <li><a class="site-nav__link" href="#services">Usługi</a></li>
+              <li><a class="site-nav__link" href="#portfolio">Portfolio</a></li>
+              <li><a class="site-nav__link" href="#contact">Kontakt</a></li>
             </ul>
           </nav>
         </div>
