Finished work with main header / Start work with home section

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -10,7 +10,7 @@
     <!--Phone Numbers Detection-->
     <meta name="format-detection" content="telephone=no">
     <!--Search Engine Optimization Sources-->
-    <title>Normal - Template</title>
+    <title>Mateusz Archiciński / Front-End Developer</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="Mateusz Archiciński">
@@ -56,6 +56,7 @@
     <header class="main-header">
       <div class="container">
         <div class="row no-gutters align-items-center justify-content-between"><a class="site-logo__wrapper" href="/"><img class="site-logo__img" src="images/logo/logo.png" alt="#MA - Site logo" width="94" height="28"></a>
+          <h1 class="text-hidden">#Mateusz Archiciński</h1>
           <nav class="site-nav__wrapper">
             <ul class="row site-nav__list">
               <li><a class="site-nav__link" href="#home">Home</a></li>
@@ -63,16 +64,28 @@
               <li><a class="site-nav__link" href="#services">Services</a></li>
               <li><a class="site-nav__link" href="#portfolio">Portfolio</a></li>
               <li><a class="site-nav__link" href="#contact">Contact</a></li>
+              <li>
+                <ul class="row language-settings">
+                  <li><a class="site-nav__link language-settings__link" href="/pl">pl</a></li>
+                </ul>
+              </li>
             </ul>
           </nav>
         </div>
       </div>
     </header>
     <main class="main-wrapper">
-      <section class="home-wrapper">
+      <section class="row no-gutters align-items-center justify-content-center home-wrapper">
         <header>
-          <h1>Front-End Developer</h1>
-        </header>
+          <h2 class="primary-heading">Front-End Developer</h2>
+          <div class="heading-separator">
+            <div class="heading-separator__line"></div>
+            <div class="heading-separator__rotated-box"></div>
+            <div class="heading-separator__line"></div>
+          </div>
+          <h3 class="tertiary-heading">Mateusz Archiciński</h3>
+          <div class="buttons"><a href="/" clas="btn">Get to know me</a><a href="/" clas="btn">Services</a></div>
+        </header><a href="/" clas="btn btn-arrow-down">Arrow</a>
       </section>
       <section class="about-me-wrapper">
         <div class="container">
