Working with buttons/heading-separator/home components

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -82,11 +82,11 @@
               <h2 class="primary-heading">Front-End Developer</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
-                <div class="heading-separator__box"></div>
+                <div class="heading-separator__square"></div>
                 <div class="heading-separator__line"></div>
               </div>
               <h3 class="tertiary-heading">Mateusz Archiciński</h3>
-              <div class="home-header-buttons"><a class="btn btn-accent" href="#aboutMe">Get to know me</a><a class="btn btn-primary-dark" href="#services">Services</a></div>
+              <div class="home-header-buttons"><a class="btn btn-accent to-top" href="#aboutMe">Get to know me</a><a class="btn btn-primary-dark to-top" href="#services">Services</a></div>
             </header><a class="btn btn-arrow-down" href="#aboutMe" aria-label="Go to section about me"></a>
           </div>
         </div>
