--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -94,15 +94,68 @@
       <section class="about-me-wrapper" id="aboutMe">
         <div class="container">
           <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4"></div>
-            <div class="col-4"></div>
+            <header class="col-12">
+              <h2 class="secondary-heading">sd</h2>
+              <div class="heading-separator">
+                <div class="heading-separator__line"></div>
+                <div class="heading-separator__square"></div>
+                <div class="heading-separator__line"></div>
+              </div>
+              <p></p>
+            </header>
+            <div class="col-6">sd</div>
+            <div class="col-6">sd</div>
           </div>
         </div>
       </section>
-      <sectin class="services-wrapper" id="services"></sectin>
-      <section class="portfolio-wrapper" id="portfolio"></section>
-      <section class="contact-wrapper" id="contact"></section>
+      <sectin class="services-wrapper" id="services">
+        <div class="container">
+          <div class="row">
+            <header class="col-12">
+              <h2 class="secondary-heading">sd</h2>
+              <div class="heading-separator">
+                <div class="heading-separator__line"></div>
+                <div class="heading-separator__square"></div>
+                <div class="heading-separator__line"></div>
+              </div>
+            </header>
+            <div class="col-6">sd</div>
+            <div class="col-6">sd</div>
+          </div>
+        </div>
+      </sectin>
+      <section class="portfolio-wrapper" id="portfolio">
+        <div class="container">
+          <div class="row">
+            <header class="col-12">
+              <h2 class="secondary-heading">sd</h2>
+              <div class="heading-separator">
+                <div class="heading-separator__line"></div>
+                <div class="heading-separator__square"></div>
+                <div class="heading-separator__line"></div>
+              </div>
+            </header>
+            <div class="col-6">sd</div>
+            <div class="col-6">sd</div>
+          </div>
+        </div>
+      </section>
+      <section class="contact-wrapper" id="contact">
+        <div class="container">
+          <div class="row">
+            <header class="col-12">
+              <h2 class="secondary-heading">sd</h2>
+              <div class="heading-separator">
+                <div class="heading-separator__line"></div>
+                <div class="heading-separator__square"></div>
+                <div class="heading-separator__line"></div>
+              </div>
+            </header>
+            <div class="col-6">sd</div>
+            <div class="col-6">sd</div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="main-footer"></footer>
     <!--JavaScript Sources-->
