--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -94,65 +94,60 @@
       <section class="about-me-wrapper" id="aboutMe">
         <div class="container">
           <div class="row">
-            <header class="col-12">
-              <h2 class="secondary-heading">sd</h2>
+            <header class="section-header">
+              <h2 class="secondary-heading">O mnie</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
                 <div class="heading-separator__square"></div>
                 <div class="heading-separator__line"></div>
               </div>
-              <p></p>
+              <p class="section-header-description">Pełen zestaw informacji na mój temat</p>
             </header>
-            <div class="col-6">sd</div>
-            <div class="col-6">sd</div>
           </div>
         </div>
       </section>
-      <sectin class="services-wrapper" id="services">
+      <section class="services-wrapper" id="services">
         <div class="container">
           <div class="row">
-            <header class="col-12">
-              <h2 class="secondary-heading">sd</h2>
+            <header class="section-header">
+              <h2 class="secondary-heading">Usługi</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
                 <div class="heading-separator__square"></div>
                 <div class="heading-separator__line"></div>
               </div>
+              <p class="section-header-description">Sprawdź co mogę ci zaoferować</p>
             </header>
-            <div class="col-6">sd</div>
-            <div class="col-6">sd</div>
           </div>
         </div>
-      </sectin>
+      </section>
       <section class="portfolio-wrapper" id="portfolio">
         <div class="container">
           <div class="row">
-            <header class="col-12">
-              <h2 class="secondary-heading">sd</h2>
+            <header class="section-header">
+              <h2 class="secondary-heading">Portfolio</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
                 <div class="heading-separator__square"></div>
                 <div class="heading-separator__line"></div>
               </div>
+              <p class="section-header-description">Stworzone przeze mnie projekty, samodzielnie jak i w grupie</p>
             </header>
-            <div class="col-6">sd</div>
-            <div class="col-6">sd</div>
           </div>
         </div>
       </section>
       <section class="contact-wrapper" id="contact">
         <div class="container">
           <div class="row">
-            <header class="col-12">
-              <h2 class="secondary-heading">sd</h2>
+            <header class="section-header">
+              <h2 class="secondary-heading">Kontakt</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
                 <div class="heading-separator__square"></div>
                 <div class="heading-separator__line"></div>
               </div>
+              <p class="section-header-description">Jeżeli masz jakieś pytania skontaktuj się zemną, wybór należy do ciebie z jakiej formy kontaktu skorzystasz</p>
             </header>
-            <div class="col-6">sd</div>
-            <div class="col-6">sd</div>
           </div>
         </div>
       </section>
