--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -75,30 +75,31 @@
       </div>
     </header>
     <main class="main-wrapper">
-      <section class="home-wrapper" id="home">
+      <section class="section home-wrapper" id="home">
         <div class="container">
           <div class="row no-gutters flex-column align-items-center justify-content-center home-row">
             <header class="home-header">
               <h2 class="primary-heading">Front-End Developer</h2>
               <div class="heading-separator">
-                <div class="heading-separator__line"></div>
-                <div class="heading-separator__square"></div>
-                <div class="heading-separator__line"></div>
+                <div class="heading-separator__line primary"></div>
+                <div class="heading-separator__square medium"></div>
+                <div class="heading-separator__line accent"></div>
               </div>
               <h3 class="tertiary-heading">Mateusz Archiciński</h3>
-              <div class="home-header-buttons"><a class="btn btn-accent to-top" href="#aboutMe">Poznaj mnie</a><a class="btn btn-primary-dark to-top" href="#services">Usługi</a></div>
-            </header><a class="btn btn-arrow-down" href="#aboutMe" aria-label="Przejdz do sekcji o mnie"></a>
+              <div class="home-header-buttons"><a class="btn to-top btn-accent" href="#aboutMe">Poznaj mnie</a><a class="btn to-top btn-primary-dark" href="#services">Usługi</a></div>
+            </header><a class="btn btn-round to-top btn-arrow-down" href="#about-me" aria-label="Przejdz do sekcji o mnie"></a>
           </div>
         </div>
       </section>
-      <section class="about-me-wrapper" id="aboutMe">
+      <section class="section about-me-wrapper" id="about-me">
         <div class="container">
-          <div class="row">
+          <div class="row no-gutters flex-column align-items-center">
+            <div class="section-decoration"><span class="icon icon-person section-decoration-icon"></span></div>
             <header class="section-header">
               <h2 class="secondary-heading">O mnie</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
-                <div class="heading-separator__square"></div>
+                <div class="heading-separator__square primary"></div>
                 <div class="heading-separator__line"></div>
               </div>
               <p class="section-header-description">Pełen zestaw informacji na mój temat</p>
@@ -106,14 +107,15 @@
           </div>
         </div>
       </section>
-      <section class="services-wrapper" id="services">
+      <section class="section services-wrapper" id="services">
         <div class="container">
-          <div class="row">
+          <div class="row no-gutters flex-column align-items-center">
+            <div class="section-decoration"><span class="icon icon-build section-decoration-icon"></span></div>
             <header class="section-header">
               <h2 class="secondary-heading">Usługi</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
-                <div class="heading-separator__square"></div>
+                <div class="heading-separator__square primary"></div>
                 <div class="heading-separator__line"></div>
               </div>
               <p class="section-header-description">Sprawdź co mogę ci zaoferować</p>
@@ -121,14 +123,15 @@
           </div>
         </div>
       </section>
-      <section class="portfolio-wrapper" id="portfolio">
+      <section class="section portfolio-wrapper" id="portfolio">
         <div class="container">
-          <div class="row">
+          <div class="row no-gutters flex-column align-items-center">
+            <div class="section-decoration"><span class="icon icon-code section-decoration-icon"></span></div>
             <header class="section-header">
               <h2 class="secondary-heading">Portfolio</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
-                <div class="heading-separator__square"></div>
+                <div class="heading-separator__square primary"></div>
                 <div class="heading-separator__line"></div>
               </div>
               <p class="section-header-description">Stworzone przeze mnie projekty, samodzielnie jak i w grupie</p>
@@ -136,23 +139,38 @@
           </div>
         </div>
       </section>
-      <section class="contact-wrapper" id="contact">
+      <section class="section contact-wrapper" id="contact">
         <div class="container">
-          <div class="row">
+          <div class="row no-gutters flex-column align-items-center">
+            <div class="section-decoration"><span class="icon icon-call section-decoration-icon"></span></div>
             <header class="section-header">
               <h2 class="secondary-heading">Kontakt</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
-                <div class="heading-separator__square"></div>
+                <div class="heading-separator__square primary"></div>
                 <div class="heading-separator__line"></div>
               </div>
-              <p class="section-header-description">Jeżeli masz jakieś pytania skontaktuj się zemną, wybór należy do ciebie z jakiej formy kontaktu skorzystasz</p>
+              <p class="section-header-description">Jeżeli masz jakieś pytania skontaktuj się zemną, <br>wybór należy do ciebie z jakiej formy kontaktu skorzystasz</p>
             </header>
           </div>
         </div>
       </section>
     </main>
-    <footer class="main-footer"></footer>
+    <footer class="main-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Znajdź mnie</h2>
+          </div>
+          <div class="col-3">
+            <h2>Nawigacja</h2>
+          </div>
+          <div class="col-3">
+            <h2>Kontakt</h2>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!--JavaScript Sources-->
     <!--build:js js/main.min.js-->
     <!--Bower Components-->
