A few components improvements

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -160,13 +160,16 @@
       <div class="container">
         <div class="row">
           <div class="col-3">
-            <h2>Znajdź mnie</h2>
+            <h3>Polecane projekty</h3>
           </div>
           <div class="col-3">
-            <h2>Nawigacja</h2>
+            <h3>Ostatnie modyfikacje</h3>
           </div>
           <div class="col-3">
-            <h2>Kontakt</h2>
+            <h3>Przydatne linki</h3>
+          </div>
+          <div class="col-12">
+            <p><small>Copyright 2015 - 2016 Mateusz Archiciński © All rights reserved</small></p>
           </div>
         </div>
       </div>
