Working with main footer component

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -159,17 +159,41 @@
     <footer class="main-footer">
       <div class="container">
         <div class="row">
-          <div class="col-3">
-            <h3>Polecane projekty</h3>
+          <div class="col-4">
+            <h3 class="main-footer__heading">Recommended projects</h3>
+            <div class="heading-separator">
+              <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
+            </div>
+            <ul class="main-footer__list">
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+            </ul>
           </div>
-          <div class="col-3">
-            <h3>Ostatnie modyfikacje</h3>
+          <div class="col-4">
+            <h3 class="main-footer__heading">Recent changes</h3>
+            <div class="heading-separator">
+              <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
+            </div>
+            <ul class="main-footer__list">
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+            </ul>
           </div>
-          <div class="col-3">
-            <h3>Przydatne linki</h3>
+          <div class="col-4">
+            <h3 class="main-footer__heading">Find me</h3>
+            <div class="heading-separator">
+              <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
+            </div>
+            <ul class="main-footer__list">
+              <li><a href="#">1</a></li>
+              <li>2</li>
+              <li>3</li>
+            </ul>
           </div>
           <div class="col-12">
-            <p><small>Copyright 2015 - 2016 Mateusz Archiciński © All rights reserved</small></p>
+            <p class="main-footer__copyright"><small>&#169; 2015 - 2017 Mateusz Archiciński - All rights reserved</small></p>
           </div>
         </div>
       </div>
