working on footer & links components

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -96,7 +96,7 @@
           <div class="row no-gutters flex-column align-items-center">
             <div class="section-decoration"><span class="icon icon-person section-decoration-icon"></span></div>
             <header class="section-header">
-              <h2 class="secondary-heading">O mnie</h2>
+              <h2 class="secondary-heading">About me</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
                 <div class="heading-separator__square primary"></div>
@@ -112,7 +112,7 @@
           <div class="row no-gutters flex-column align-items-center">
             <div class="section-decoration"><span class="icon icon-build section-decoration-icon"></span></div>
             <header class="section-header">
-              <h2 class="secondary-heading">Usługi</h2>
+              <h2 class="secondary-heading">Services</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
                 <div class="heading-separator__square primary"></div>
@@ -144,13 +144,13 @@
           <div class="row no-gutters flex-column align-items-center">
             <div class="section-decoration"><span class="icon icon-call section-decoration-icon"></span></div>
             <header class="section-header">
-              <h2 class="secondary-heading">Kontakt</h2>
+              <h2 class="secondary-heading">Contact</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
                 <div class="heading-separator__square primary"></div>
                 <div class="heading-separator__line"></div>
               </div>
-              <p class="section-header-description">Jeżeli masz jakieś pytania skontaktuj się zemną. <br>Wybór należy do ciebie z jakiej formy kontaktu skorzystasz.</p>
+              <p class="section-header-description">Jeżeli masz jakieś pytania skontaktuj się zemną, <br>wybór należy do ciebie z jakiej formy kontaktu skorzystasz</p>
             </header>
           </div>
         </div>
@@ -187,7 +187,7 @@
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
             <ul class="main-footer__list">
-              <li><a href="#">1</a></li>
+              <li><a class="no-link main-footer__link" href="#">1</a></li>
               <li>2</li>
               <li>3</li>
             </ul>
