--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -187,7 +187,7 @@
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
             <ul class="main-footer__list">
-              <li><a href="#">1</a></li>
+              <li><a class="no-link main-footer__link" href="#">1</a></li>
               <li>2</li>
               <li>3</li>
             </ul>
