Added special font to icons/rebuilt some components

--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -87,14 +87,14 @@
               </div>
               <h3 class="tertiary-heading">Mateusz Archiciński</h3>
               <div class="home-header-buttons"><a class="btn to-top btn-accent" href="#aboutMe">Poznaj mnie</a><a class="btn to-top btn-primary-dark" href="#services">Usługi</a></div>
-            </header><a class="btn btn-round to-top btn-arrow-down" href="#about-me" aria-label="Przejdz do sekcji o mnie"></a>
+            </header><a class="btn btn-round to-top" href="#about-me" aria-label="Przejdz do sekcji o mnie"><span class="icon icon-125 icon-down-open-1" aria-hidden="true"></span></a>
           </div>
         </div>
       </section>
       <section class="section about-me-wrapper" id="about-me">
         <div class="container">
           <div class="row no-gutters flex-column align-items-center">
-            <div class="section-decoration"><span class="icon icon-person section-decoration-icon"></span></div>
+            <div class="section-decoration"><span class="icon icon-user section-decoration-icon"></span></div>
             <header class="section-header">
               <h2 class="secondary-heading">O mnie</h2>
               <div class="heading-separator">
@@ -110,7 +110,7 @@
       <section class="section services-wrapper" id="services">
         <div class="container">
           <div class="row no-gutters flex-column align-items-center">
-            <div class="section-decoration"><span class="icon icon-build section-decoration-icon"></span></div>
+            <div class="section-decoration"><span class="icon icon-wrench section-decoration-icon"></span></div>
             <header class="section-header">
               <h2 class="secondary-heading">Usługi</h2>
               <div class="heading-separator">
@@ -142,7 +142,7 @@
       <section class="section contact-wrapper" id="contact">
         <div class="container">
           <div class="row no-gutters flex-column align-items-center">
-            <div class="section-decoration"><span class="icon icon-call section-decoration-icon"></span></div>
+            <div class="section-decoration"><span class="icon icon-phone section-decoration-icon"></span></div>
             <header class="section-header">
               <h2 class="secondary-heading">Kontakt</h2>
               <div class="heading-separator">
@@ -165,9 +165,9 @@
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
             <ul class="main-footer__list">
-              <li>1</li>
-              <li>2</li>
-              <li>3</li>
+              <li><a class="main-footer__link" href="#">123</a></li>
+              <li><a class="main-footer__link" href="#">123</a></li>
+              <li><a class="main-footer__link" href="#">123</a></li>
             </ul>
           </div>
           <div class="col-4">
@@ -176,21 +176,17 @@
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
             <ul class="main-footer__list">
-              <li>1</li>
-              <li>2</li>
-              <li>3</li>
+              <li><a class="main-footer__link" href="#">123</a></li>
+              <li><a class="main-footer__link" href="#">123</a></li>
+              <li><a class="main-footer__link" href="#">123</a></li>
             </ul>
           </div>
-          <div class="col-4">
+          <div class="col-4 main-footer__findme">
             <h3 class="main-footer__heading">Znajdź mnie</h3>
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
-            <ul class="main-footer__list">
-              <li><a class="no-link main-footer__link" href="#">1</a></li>
-              <li>2</li>
-              <li>3</li>
-            </ul>
+            <div class="main-footer__findme-body"><a class="btn btn-square to-top"></a><a class="btn btn-square to-top"></a></div>
           </div>
           <div class="col-12">
             <p class="main-footer__copyright"><small>&#169; 2015 - 2017 Mateusz Archiciński - Wszelkie prawa zastrzeżone</small></p>
