Sass & Pug files changes

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -79,13 +79,13 @@
         <div class="container">
           <div class="row no-gutters flex-column align-items-center justify-content-center home-row">
             <header class="home-header">
-              <h2 class="primary-heading">Front-End Developer</h2>
+              <h2 class="heading heading-1 white text-center">Front-End Developer</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line primary"></div>
                 <div class="heading-separator__square medium"></div>
                 <div class="heading-separator__line accent"></div>
               </div>
-              <h3 class="tertiary-heading">Mateusz Archiciński</h3>
+              <h3 class="heading heading-3 white text-center">Mateusz Archiciński</h3>
               <div class="home-header-buttons"><a class="btn to-top btn-accent" href="#aboutMe">Get to know me</a><a class="btn to-top btn-primary-dark" href="#services">Services</a></div>
             </header><a class="btn btn-round to-top" href="#about-me" aria-label="Go to section about me"><span class="icon icon-125 icon-down-open-1" aria-hidden="true"></span></a>
           </div>
@@ -96,7 +96,7 @@
           <div class="row no-gutters flex-column align-items-center">
             <div class="section-decoration"><span class="icon icon-user section-decoration-icon"></span></div>
             <header class="section-header">
-              <h2 class="secondary-heading">About me</h2>
+              <h2 class="heading heading-2 heading-unique-1 text-center">About me</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
                 <div class="heading-separator__square primary"></div>
@@ -112,7 +112,7 @@
           <div class="row no-gutters flex-column align-items-center">
             <div class="section-decoration"><span class="icon icon-wrench section-decoration-icon"></span></div>
             <header class="section-header">
-              <h2 class="secondary-heading">Services</h2>
+              <h2 class="heading heading-2 heading-unique-1 text-center">Services</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
                 <div class="heading-separator__square primary"></div>
@@ -128,7 +128,7 @@
           <div class="row no-gutters flex-column align-items-center">
             <div class="section-decoration"><span class="icon icon-code section-decoration-icon"></span></div>
             <header class="section-header">
-              <h2 class="secondary-heading">Portfolio</h2>
+              <h2 class="heading heading-2 heading-unique-1 text-center">Portfolio</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
                 <div class="heading-separator__square primary"></div>
@@ -144,13 +144,13 @@
           <div class="row no-gutters flex-column align-items-center">
             <div class="section-decoration"><span class="icon icon-phone section-decoration-icon"></span></div>
             <header class="section-header">
-              <h2 class="secondary-heading">Contact</h2>
+              <h2 class="heading heading-2 heading-unique-1 text-center">Contact</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line"></div>
                 <div class="heading-separator__square primary"></div>
                 <div class="heading-separator__line"></div>
               </div>
-              <p class="section-header-description">Jeżeli masz jakieś pytania skontaktuj się zemną, <br>wybór należy do ciebie z jakiej formy kontaktu skorzystasz</p>
+              <p class="section-header-description">Jeżeli masz jakieś pytania skontaktuj się zemną</p>
             </header>
           </div>
         </div>
@@ -160,18 +160,20 @@
       <div class="container">
         <div class="row">
           <div class="col-4">
-            <h3 class="main-footer__heading">Recommended projects</h3>
+            <h3 class="heading heading-5 white text-center">Recommended projects</h3>
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
             <ul class="main-footer__list">
+              <li><a class="main-footer__link" href="#">123</a></li>
+              <li><a class="main-footer__link" href="#">123</a></li>
               <li><a class="main-footer__link" href="#">123</a></li>
               <li><a class="main-footer__link" href="#">123</a></li>
               <li><a class="main-footer__link" href="#">123</a></li>
             </ul>
           </div>
           <div class="col-4">
-            <h3 class="main-footer__heading">Recent changes</h3>
+            <h3 class="heading heading-5 white text-center">Recent changes</h3>
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
@@ -179,14 +181,16 @@
               <li><a class="main-footer__link" href="#">123</a></li>
               <li><a class="main-footer__link" href="#">123</a></li>
               <li><a class="main-footer__link" href="#">123</a></li>
+              <li><a class="main-footer__link" href="#">123</a></li>
+              <li><a class="main-footer__link" href="#">123</a></li>
             </ul>
           </div>
           <div class="col-4 main-footer__findme">
-            <h3 class="main-footer__heading">Find me</h3>
+            <h3 class="heading heading-5 white text-center">Find me</h3>
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
-            <div class="main-footer__findme-body"><a class="btn btn-square to-top"></a><a class="btn btn-square to-top"></a></div>
+            <div class="main-footer__findme-body"><a class="btn btn-square to-top btn-codepen"><span class="icon icon-codepen"></span></a><a class="btn btn-square to-top btn-facebook"><span class="icon icon-facebook"></span></a><a class="btn btn-square to-top btn-github"><span class="icon icon-github"></span></a><a class="btn btn-square to-top btn-gplus"><span class="icon icon-gplus"></span></a><a class="btn btn-square to-top btn-linkedin"><span class="icon icon-linkedin"></span></a><a class="btn btn-square to-top btn-twitter"><span class="icon icon-twitter"></span></a></div>
           </div>
           <div class="col-12">
             <p class="main-footer__copyright"><small>&#169; 2015 - 2017 Mateusz Archiciński - All rights reserved</small></p>
