--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -82,7 +82,7 @@
               <h2 class="heading heading-1 white text-center">Front-End Developer</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line primary"></div>
-                <div class="heading-separator__square medium"></div>
+                <div class="heading-separator__square heading-separator__square-incresed-2"></div>
                 <div class="heading-separator__line accent"></div>
               </div>
               <h3 class="heading heading-3 white text-center">Mateusz Archiciński</h3>
@@ -165,11 +165,11 @@
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
             <ul class="main-footer__list">
-              <li><a class="main-footer__link" href="#">123</a></li>
-              <li><a class="main-footer__link" href="#">123</a></li>
-              <li><a class="main-footer__link" href="#">123</a></li>
-              <li><a class="main-footer__link" href="#">123</a></li>
-              <li><a class="main-footer__link" href="#">123</a></li>
+              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
+              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
+              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
+              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
+              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
             </ul>
           </div>
           <div class="col-4">
@@ -178,11 +178,11 @@
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
             <ul class="main-footer__list">
-              <li><a class="main-footer__link" href="#">123</a></li>
-              <li><a class="main-footer__link" href="#">123</a></li>
-              <li><a class="main-footer__link" href="#">123</a></li>
-              <li><a class="main-footer__link" href="#">123</a></li>
-              <li><a class="main-footer__link" href="#">123</a></li>
+              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
+              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
+              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
+              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
+              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
             </ul>
           </div>
           <div class="col-4 main-footer__findme">
@@ -190,7 +190,7 @@
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
-            <div class="main-footer__findme-body"><a class="btn btn-square to-top btn-codepen"><span class="icon icon-codepen"></span></a><a class="btn btn-square to-top btn-facebook"><span class="icon icon-facebook"></span></a><a class="btn btn-square to-top btn-github"><span class="icon icon-github"></span></a><a class="btn btn-square to-top btn-gplus"><span class="icon icon-gplus"></span></a><a class="btn btn-square to-top btn-linkedin"><span class="icon icon-linkedin"></span></a><a class="btn btn-square to-top btn-twitter"><span class="icon icon-twitter"></span></a></div>
+            <div class="main-footer__findme-body"><a class="btn btn-square to-top btn-codepen" href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label="Przejdź do Codepen Mateusz Archiciński"><span class="icon icon-codepen" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-facebook" href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label="Przejdź do Facebook Mateusz Archiciński"><span class="icon icon-facebook" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-github" href="https://github.com/mateuszarchicinski" target="_blank" aria-label="Przejdź do Github Mateusz Archiciński"><span class="icon icon-github" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-gplus" href="https://plus.google.com/111077912668591105452" target="_blank" aria-label="Przejdź do Google+ Mateusz Archiciński"><span class="icon icon-gplus" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-linkedin" href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label="Przejdź do Linkedin Mateusz Archiciński"><span class="icon icon-linkedin" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-twitter" href="https://twitter.com/marchicinski" target="_blank" aria-label="Przejdź do Twitter Mateusz Archiciński"><span class="icon icon-twitter" aria-hidden="true"></span></a></div>
           </div>
           <div class="col-12">
             <p class="main-footer__copyright"><small>&#169; 2015 - 2017 Mateusz Archiciński - Wszelkie prawa zastrzeżone</small></p>
