--- a/src/index-en.html
+++ b/src/index-en.html
@@ -105,6 +105,44 @@
               <p class="section-header-description">Pełen zestaw informacji na mój temat</p>
             </header>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="about-me-section">
+                <header class="about-me-section-header">
+                  <h3>Profil</h3>
+                </header>
+              </div>
+              <div class="about-me-section">
+                <header class="about-me-section-header">
+                  <h3>Informacje i kontakt</h3>
+                </header>
+              </div>
+              <div class="about-me-section">
+                <header class="about-me-section-header">
+                  <h3>Atrybuty i cechy</h3>
+                </header>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="about-me-section">
+                <header class="about-me-section-header">
+                  <h3>Edukacja</h3>
+                </header>
+              </div>
+              <div class="about-me-section">
+                <header class="about-me-section-header">
+                  <h3>Doświadczenie i kursy</h3>
+                </header>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="about-me-section">
+                <header class="about-me-section-header">
+                  <h3>Umiejętności i technologie</h3>
+                </header>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="section services-wrapper" id="services">
@@ -185,12 +223,12 @@
               <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
             </ul>
           </div>
-          <div class="col-4 main-footer__findme">
+          <div class="col-4 row flex-column">
             <h3 class="heading heading-5 white text-center">Find me</h3>
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
-            <div class="main-footer__findme-body"><a class="btn btn-square to-top btn-codepen" href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label="Go to Codepen of Mateusz Archiciński"><span class="icon icon-codepen" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-facebook" href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label="Go to Facebook of Mateusz Archiciński"><span class="icon icon-facebook" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-github" href="https://github.com/mateuszarchicinski" target="_blank" aria-label="Go to Github of Mateusz Archiciński"><span class="icon icon-github" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-gplus" href="https://plus.google.com/111077912668591105452" target="_blank" aria-label="Go to Google+ of Mateusz Archiciński"><span class="icon icon-gplus" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-linkedin" href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label="Go to Linkedin of Mateusz Archiciński"><span class="icon icon-linkedin" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-twitter" href="https://twitter.com/marchicinski" target="_blank" aria-label="Go to Twitter of Mateusz Archiciński"><span class="icon icon-twitter" aria-hidden="true"></span></a></div>
+            <div class="row align-content-center align-items-center justify-content-center main-footer__findme-body"><a class="btn btn-square to-top btn-codepen" href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label="Go to Codepen of Mateusz Archiciński"><span class="icon icon-codepen" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-facebook" href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label="Go to Facebook of Mateusz Archiciński"><span class="icon icon-facebook" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-github" href="https://github.com/mateuszarchicinski" target="_blank" aria-label="Go to Github of Mateusz Archiciński"><span class="icon icon-github" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-gplus" href="https://plus.google.com/111077912668591105452" target="_blank" aria-label="Go to Google+ of Mateusz Archiciński"><span class="icon icon-gplus" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-linkedin" href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label="Go to Linkedin of Mateusz Archiciński"><span class="icon icon-linkedin" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-twitter" href="https://twitter.com/marchicinski" target="_blank" aria-label="Go to Twitter of Mateusz Archiciński"><span class="icon icon-twitter" aria-hidden="true"></span></a></div>
           </div>
           <div class="col-12">
             <p class="main-footer__copyright"><small>&#169; 2015 - 2017 Mateusz Archiciński - All rights reserved</small></p>
