dev-face sass component added

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -78,7 +78,7 @@
       <section class="section home-wrapper" id="home">
         <div class="container">
           <div class="row no-gutters flex-column align-items-center justify-content-center home-row">
-            <header class="home-header">
+            <hgroup class="home-header">
               <h2 class="heading heading-1 white text-center">Front-End Developer</h2>
               <div class="heading-separator">
                 <div class="heading-separator__line primary"></div>
@@ -87,7 +87,7 @@
               </div>
               <h3 class="heading heading-3 white text-center">Mateusz Archiciński</h3>
               <div class="home-header-buttons"><a class="btn to-top btn-accent" href="#aboutMe">Get to know me</a><a class="btn to-top btn-primary-dark" href="#services">Services</a></div>
-            </header><a class="btn btn-round to-top" href="#about-me" aria-label="Go to section about me"><span class="icon icon-125 icon-down-open-1" aria-hidden="true"></span></a>
+            </hgroup><a class="btn btn-round to-top" href="#about-me" aria-label="Go to section about me"><span class="icon icon-125 icon-down-open-1" aria-hidden="true"></span></a>
           </div>
         </div>
       </section>
@@ -107,6 +107,9 @@
           </div>
           <div class="row">
             <div class="col-6">
+              <figure class="dev-face__wrapper"><img class="dev-face__img dev-face__img-rotate-28" src="../images/Mateusz-Archiciński_Front-End-Developer.jpg" alt="Mateusz Archiciński Avatar" width="190" height="190">
+                <figcaption class="dev-face__img-caption"><span class="dev-face__name">Mateusz Archiciński</span><span class="dev-face__profession">Front-End Developer</span></figcaption>
+              </figure>
               <div class="about-me-section">
                 <header class="about-me-section-header">
                   <h3>Profil</h3>
